crates/language-v2/tests/src/fail/p3_references/lexical_context_switch_not_keyword/test.stderr
error: Reference 'Two' of kind 'Token' is not valid. Expected: [Keyword]
  --> src/fail/p3_references/lexical_context_switch_not_keyword/test.rs:18:56
   |
18 | ...                   fields = (entry = Required(Two), field_1 = Required(Three))
   |                                                  ^^^
